# tdx-workload-attestation

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  build.rs
.github/workflows/: dependabot.yml  run-tests.yml  scorecard.yml
code-review-approvals/: review-index.json
code-review-approvals/refs/heads/main/00bea33e919ed3008a134921a2a2e95b480ac79b-0a01b1b47f8ab2bd94757c7b64ff457ab931e31b/github/: aHR0cHM6Ly9naXR0dWYuZGV2L2dpdGh1Yi1hcHA=
code-review-approvals/refs/heads/main/089839cb78a1170c09282a32e65ecaf810ceedee-8c44605d824c995a4e7bc4b657237fd2974c6d3e/github/: aHR0cHM6Ly9naXR0dWYuZGV2L2dpdGh1Yi1hcHA=
code-review-approvals/refs/heads/main/089839cb78a1170c09282a32e65ecaf810ceedee-d9de650b0bda0903b9ceb82d6b41787042f330ef/github/: aHR0cHM6Ly9naXR0dWYuZGV2L2dpdGh1Yi1hcHA=
code-review-approvals/refs/heads/main/0b385edca6a331c213b6c481614e05bcbe0ccb8c-1c8d69c527edefbee983df235410581a50c2f3c6/github/: aHR0cHM6Ly9naXR0dWYuZGV2L2dpdGh1Yi1hcHA=
code-review-approvals/refs/heads/main/0b385edca6a331c213b6c481614e05bcbe0ccb8c-c34896956e08ccdcc8b2214cd84029e3c30559ba/github/: aHR0cHM6Ly9naXR0dWYuZGV2L2dpdGh1Yi1hcHA=
code-review-approvals/refs/heads/main/12205ed4e0795252a4e3cae3756f88b1eca768ee-ef2dbaa348f6011b4332d9cbe6c6cf8d79f390bd/github/: aHR0cHM6Ly9naXR0dWYuZGV2L2dpdGh1Yi1hcHA=
code-review-approvals/refs/heads/main/15c2cbbb6fb4db0bac048da6bf9985ba1a4ec5fc-0e5a9197810bc1fb94dc8e46f066f363827d5a7e/github/: aHR0cHM6Ly9naXR0dWYuZGV2L2dpdGh1Yi1hcHA=
code-review-approvals/refs/heads/main/26c84bd0caf2b7c47ae0d2c875d2e181538ac5bd-a6772b9ad6046e6c93af36641f34a25b494ee813/github/: aHR0cHM6Ly9naXR0dWYuZGV2L2dpdGh1Yi1hcHA=
code-review-approvals/refs/heads/main/2aa1f36c9cfb93819292e7214b79bb88cc232a2e-1419cda54eff8c241bbe796db0c934bf1965e5fa/github/: aHR0cHM6Ly9naXR0dWYuZGV2L2dpdGh1Yi1hcHA=
code-review-approvals/refs/heads/main/2ac1ec63670b237743d62e8d825139d079cfba36-36ec7636b7b19b3a9d0cb9a93c3e44d826c3a961/github/: aHR0cHM6Ly9naXR0dWYuZGV2L2dpdGh1Yi1hcHA=
code-review-approvals/refs/heads/main/33b46aa4b7f2aa98b4a7dc38587ff626458211df-ab9a2af80bf3a06ef1742ab43cda2213d18d2758/github/: aHR0cHM6Ly9naXR0dWYuZGV2L2dpdGh1Yi1hcHA=
code-review-approvals/refs/heads/main/44f2c2994ea50473fb8fabd978b624668d9b9d54-9f29193b3fdea490bb293276854ff8145404a4d0/github/: aHR0cHM6Ly9naXR0dWYuZGV2L2dpdGh1Yi1hcHA=
code-review-approvals/refs/heads/main/5f77a8df050bb6282d1d965e3f342033fc042d97-131add86ffa4522e3285a6647ea27a75d1618b76/github/: aHR0cHM6Ly9naXR0dWYuZGV2L2dpdGh1Yi1hcHA=
examples/: example.rs  gcp.rs  report.rs
scripts/: gcp-endorsement-setup.sh
src/: error.rs  host.rs  lib.rs  main.rs  provider.rs
src/cli/: main.rs  platform.rs  report.rs
src/gcp/: mod.rs
src/gcp/tdx/: mod.rs
src/tdx/: mod.rs  report.rs
src/tdx/linux/: device.rs  mod.rs  rtmr.rs
src/verification/: mod.rs  signature.rs  utils.rs  x509.rs
(+14 files in other folders)
