[package]
name = "tdx_workload_attestation"
version = "0.1.0"
edition = "2024"
authors = ["Intel Corporation"]
license = "Apache-2.0"

[features]
default = ["tdx-linux"]
yaml = []
tdx-linux = ["dep:vmm-sys-util", "dep:serde-big-array"]
host-verification = ["dep:openssl"]
host-gcp-tdx = ["tdx-linux", "host-verification", "dep:protobuf"]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
hex = "0.4.3"
openssl = { version = "0.10.72", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
# vmm-sys-util and serde-big-array are needed for the tdx-linux feature
vmm-sys-util = { version = "0.12.1", optional = true }
serde-big-array = { version = "0.5.1", optional = true }
protobuf = {version = "3.7.2", optional = true }

[build-dependencies]
protobuf-codegen = { version = "3.7.2" }

[dev-dependencies]
rand = { version = "0.9.1" }
